<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:key="@string/pref_key_http_server_state"
        android:title="@string/http_server_state_title"
        android:summaryOn="@string/http_server_state_summary_running"
        android:summaryOff="@string/http_server_state_summary_stopped"
        android:disableDependentsState="true" />

    <Preference
        android:key="http_server_url"
        android:title="@string/http_server_url_title"
        android:summary="http://127.0.0.1:8080" />

    <PreferenceCategory
        android:title="@string/http_server_configuration_title"
        android:dependency="@string/pref_key_http_server_state">

        <SwitchPreferenceCompat
            android:key="@string/pref_key_http_server_anonymous_login"
            android:title="@string/http_server_anonymous_login_title"
            android:defaultValue="true"
            android:disableDependentsState="true" />

        <me.zhanghai.android.files.settings.DefaultIfEmptyEditTextPreference
            android:key="@string/pref_key_http_server_username"
            android:title="@string/http_server_username_title"
            android:defaultValue="@string/pref_default_value_http_server_username"
            android:dependency="@string/pref_key_http_server_anonymous_login"
            app:useSimpleSummaryProvider="true" />

        <me.zhanghai.android.files.settings.PasswordPreference
            android:key="@string/pref_key_http_server_password"
            android:title="@string/http_server_password_title"
            android:dependency="@string/pref_key_http_server_anonymous_login"
            android:inputType="textVisiblePassword"
            app:useSimpleSummaryProvider="true" />

        <me.zhanghai.android.files.settings.NonNegativeIntegerPreference
            android:key="@string/pref_key_http_server_port"
            android:title="@string/http_server_port_title"
            android:defaultValue="@integer/pref_default_value_http_server_port"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:key="@string/pref_key_http_server_home_directory"
            android:title="@string/http_server_home_directory_title"
            android:summary="内部共享存储空间" />

        <SwitchPreferenceCompat
            android:key="@string/pref_key_http_server_writable"
            android:title="@string/http_server_writable_title"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>